# FM

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
data/: national_stats.yaml  penalty_takers.yaml
data/matches/: eng-cro.yaml  fra-bra.yaml  ger-sco.yaml
data/players/: eng-cro.yaml
docs/: API_SETUP.md  COME_FUNZIONA.md  DEPLOY.md
scripts/: bench_breakdown.py  bench_pipeline.py  demo_sui_bih_pipeline.py
src/cli/: fetch_and_predict.py  predict_match.py  predict_result.py  serve.py  test_apis.py
src/odds/: __init__.py  api_client.py  api_normalize.py  betfair_client.py  betfair_normalize.py  devig.py  distribution.py  event_kl_model.py  event_odds_bundle.py  fast_mode.py  goalscorer.py  match_loader.py  memory_cache.py  merge_providers.py  oddspapi_bundle.py  oddspapi_client.py  oddspapi_normalize.py  oddspapi_player_props.py  player_events.py  player_props.py  request_cache.py  score_parsing.py  scrape_client.py  scrape_normalize.py  scrape_sofascore.py  scrape_sofascore_players.py  (+4 more)
tests/: conftest.py  test_api_client.py  test_betfair.py  test_devig.py  test_ev_report.py  test_event_kl_model.py  test_fast_mode.py  test_goalscorer.py  test_lineup_ev.py  test_lineup_points.py  test_lineup_web_search.py  test_manual_validation.py  test_oddspapi.py  test_player_events.py  test_player_props_scrape.py  test_result_ev.py  test_result_points.py  test_roster_loader.py  test_roster_normalize.py  test_scrape.py  test_screen_parse.py  test_sofascore_gk_fallback.py  test_starters.py  test_team_data.py  test_vision_parse.py
(+24 files in other folders)
