[project]
name = "fantamondiale"
version = "0.1.0"
description = "Fantamondiale 2026 result prediction optimizer"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "curl_cffi>=0.7"]
scrape = ["curl_cffi>=0.7"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "python-multipart>=0.0.12", "pillow>=10.0", "pytesseract>=0.3.10"]

[project.scripts]
fantamondiale-serve = "cli.serve:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
